[package]
name = "VoxelEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
vulkano = "0.29.0"
bytemuck = "1.8.0"
vulkano-shaders = "0.29.0"
winit = "0.26"
vulkano-win = "0.29.0"


colored-output = {path = "colored-output"}

web-view = { version = "0.7", features = ["edge"] }
